 - Lots of minor bug-fixes.
   Patches: Jorge Arellano Cid
+- Remove --enable-ansi configure option.
 - Limit saved cookie size.
 - Allow binding to non-ASCII keys and multimedia keys.
 - Enable line wrapping for <textarea>. (BUG#903)
 - Wrap image alt text.
   Patches: corvid
+- Add support for CSS adjacent sibling selectors.
 - Collapse parent's and first child's top margin.
   Patch: Johannes Hofmann
+- Default binding for left-tab changed to Shift-Ctrl-Tab.
   Patch: Jeremy Henty

Note: these are user-visible changes. The full Changelog is kept
      in our Mercurial repository at http://hg.dillo.org/dillo


-----------------------------------------------------------------------------

dillo-2.2.1 [July 18, 2011]

+- Fix fullwindow start.
 - Implemented "View source" as a dpi.
 - Fix: vsource html, fix entities display, indentation.
 - Accept application/xhtml+xml.
 - Small caps support.
 - Border-collapse, border-style properties.
 - Removed gcc warnings for 64bit
   Patches: Jorge Arellano Cid
+- Configurable User-Agent HTTP header.
   Patch: Alexander Voigt, corvid
+- Include Accept header in HTTP queries.
 - Work with libpng-1.4.
 - Handle zero-width space.
 - Fix segfault closing window from WM.
 - Limit total number of cookies.
 - Use the suffix/subdomain field in cookies.txt.
 - Follow most specific matching rule in cookiesrc.
 - Fix segfault with form inputs and repush for stylesheets.
 - Handle white-space: pre-wrap and pre-line.
 - Support for the word-spacing property.
 - Fix segfault with https and self-signed certificates.
 - Text-indent property.
   Patches: corvid
+- Reintroduce bg_color dillorc option.
 - Make Dillo compile with Clang.
 - Fix Textblock flushing.
 - Support !important in style attributes.
   Patches: Johannes Hofmann
+- Implement line-height.
 - Draw image maps when image not loaded.
   Patches: Johannes Hofmann, corvid
+- Support @media rules.
 - Implement media-conditional @import rules.
 - Configure/Makefile cleanup.