@@ -218,11 +218,4 @@ void PrefsParser::parse(FILE *fp)
    // restore the old numeric locale
    setlocale(LC_NUMERIC, oldLocale);
    dFree(oldLocale);
-
-
-   if (prefs.limit_text_width) {
-      /* BUG: causes 100% CPU usage with <button> or <input type="image"> */
-      MSG_WARN("Disabling limit_text_width preference (currently broken).\n");
-      prefs.limit_text_width = FALSE;
-   }
 }
